made the changes according to comments
