# src/app/authentication/handlers/signInHandler.go
@@ -18,24 +18,23 @@ import (
 // @Failure 400 {object} string "Bad request"
 // @Failure 401 {object} string "Unauthorized"
 // @Router /signin [post]
-
 func SignInHandler(userService *service.SignInService) gin.HandlerFunc {
-    return func(c *gin.Context) {
-        var signInRequest models.SignInRequest
+	return func(c *gin.Context) {
+		var signInRequest models.SignInRequest
 
-        // Bind JSON request body to SignInRequest struct
-        if err := c.ShouldBindJSON(&signInRequest); err != nil {
-            c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-            return
-        }
+		// Bind JSON request body to SignInRequest struct
+		if err := c.ShouldBindJSON(&signInRequest); err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
 
-        // Call SignIn method to authenticate user
-        if err := userService.SignIn(signInRequest); err != nil {
-            c.JSON(http.StatusUnauthorized, gin.H{"error": "authentication failed"})
-            return
-        }
+		// Call SignIn method to authenticate user
+		if err := userService.SignIn(signInRequest); err != nil {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "authentication failed"})
+			return
+		}
 
-        // Authentication successful
-        c.JSON(http.StatusOK, gin.H{"message": "User authenticated successfully"})
-    }
+		// Authentication successful
+		c.JSON(http.StatusOK, gin.H{"message": "User authenticated successfully"})
+	}
 }
